navbar & footer fixment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>WHEREPICK</title>
+    <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
     <!-- <link rel="stylesheet" href="./src/css/style.css"> -->
@@ -52,9 +52,9 @@
             <img src="" alt="previsualizar" id="img_pre">
         </div>
         <div id="arrows">
-            <div id="left_arrow"> <img src="https://acolmenero.site/photowhere/img/arrow.svg" alt="flecha izquierda">
+            <div id="left_arrow"> <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha izquierda">
             </div>
-            <div id="right_arrow"> <img src="https://acolmenero.site/photowhere/img/arrow.svg" alt="flecha derecha">
+            <div id="right_arrow"> <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha derecha">
             </div>
         </div>
     </div>
@@ -80,8 +80,8 @@
                                 <p></p>
                             </div>
                             <div id="place_photos" data-photos>
-                                <img src="https://acolmenero.site/photowhere/img/places/chipiona_03.jpg" alt="Foto 0 del lugar">
-                                <img src="https://acolmenero.site/photowhere/img/places/chipiona_01.jpg" alt="Foto 1 del lugar">
+                                <img src="https://acolmenero.site/photowhere/src/img/places/chipiona_03.jpg" alt="Foto 0 del lugar">
+                                <img src="https://acolmenero.site/photowhere/src/img/places/chipiona_01.jpg" alt="Foto 1 del lugar">
                             </div>
 
                             <p id="place_address"></p>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=monumentos">
-                            <img src="https://acolmenero.site/photowhere/img/types/monumento.jpg" alt="monumentos">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/monumento.jpg" alt="monumentos">
                             <div>
                                 <p> Monumentos </p>
                             </div>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=naturaleza">
-                            <img src="https://acolmenero.site/photowhere/img/types/naturaleza.jpg" alt="naturaleza">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/naturaleza.jpg" alt="naturaleza">
                             <div>
                                 <p> Naturaleza </p>
                             </div>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=playa">
-                            <img src="https://acolmenero.site/photowhere/img/types/playa.jpg" alt="playa">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/playa.jpg" alt="playa">
                             <div>
                                 <p> Playa </p>
                             </div>
@@ -149,7 +149,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=color">
-                            <img src="https://acolmenero.site/photowhere/img/types/color_cudillero_2.jpg" alt="color">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/color_cudillero_2.jpg" alt="color">
                             <div>
                                 <p> Color </p>
                             </div>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=castillo">
-                            <img src="https://acolmenero.site/photowhere/img/types/castillo_murallaAvila.jpg" alt="castillo">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/castillo_murallaAvila.jpg" alt="castillo">
                             <div>
                                 <p> Castillos </p>
                             </div>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=molinos">
-                            <img src="https://acolmenero.site/photowhere/img/types/molinosConsuegra.jpg" alt="molinos">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/molinosConsuegra.jpg" alt="molinos">
                             <div>
                                 <p> Molinos </p>
                             </div>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=faro">
-                            <img src="https://acolmenero.site/photowhere/img/types/faroTrafalgar.jpg" alt="faro">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/faroTrafalgar.jpg" alt="faro">
                             <div>
                                 <p> Faros </p>
                             </div>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=cascada">
-                            <img src="https://acolmenero.site/photowhere/img/types/cascada_presasPadrillo_0.jpg" alt="cascada">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/cascada_presasPadrillo_0.jpg" alt="cascada">
                             <div>
                                 <p> Cascadas </p>
                             </div>
@@ -189,7 +189,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=carretera">
-                            <img src="https://acolmenero.site/photowhere/img/types/carretera_curvaCovadonga.jpg" alt="carretera">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/carretera_curvaCovadonga.jpg" alt="carretera">
                             <div>
                                 <p> Carretera </p>
                             </div>
@@ -197,7 +197,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=rural">
-                            <img src="https://acolmenero.site/photowhere/img/types/rural_roblerillodegata.jpg" alt="rural">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/rural_roblerillodegata.jpg" alt="rural">
                             <div>
                                 <p> Rural </p>
                             </div>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=nolight">
-                            <img src="https://acolmenero.site/photowhere/img/types/nolight.jpg" alt="nolight">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/nolight.jpg" alt="nolight">
                             <div>
                                 <p> Sin Contaminación Luminica </p>
                             </div>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=puente">
-                            <img src="https://acolmenero.site/photowhere/img/types/puentes.jpg" alt="puente">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/puentes.jpg" alt="puente">
                             <div>
                                 <p> Puentes </p>
                             </div>
@@ -221,7 +221,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=urbano">
-                            <img src="https://acolmenero.site/photowhere/img/types/urbano.jpg" alt="urbano">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/urbano.jpg" alt="urbano">
                             <div>
                                 <p> Urbano </p>
                             </div>
@@ -229,7 +229,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=estatua">
-                            <img src="https://acolmenero.site/photowhere/img/types/estatuas_plazaMayorMadrid_0.jpg" alt="estatua">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/estatuas_plazaMayorMadrid_0.jpg" alt="estatua">
                             <div>
                                 <p> Estatuas </p>
                             </div>
@@ -237,7 +237,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=graffiti">
-                            <img src="https://acolmenero.site/photowhere/img/types/graffiti.jpg" alt="graffiti">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/graffiti.jpg" alt="graffiti">
                             <div>
                                 <p> Graffiti </p>
                             </div>
@@ -245,7 +245,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=roca">
-                            <img src="https://acolmenero.site/photowhere/img/types/rocas.jpg" alt="roca">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/rocas.jpg" alt="roca">
                             <div>
                                 <p> Rocas </p>
                             </div>
@@ -253,7 +253,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=acantilado">
-                            <img src="https://acolmenero.site/photowhere/img/types/acantiladoInfiernu_2.webp" alt="acantilado">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/acantiladoInfiernu_2.webp" alt="acantilado">
                             <div>
                                 <p> Acantilados </p>
                             </div>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=pueblo">
-                            <img src="https://acolmenero.site/photowhere/img/types/pueblo_callejaFlores_0.jpg" alt="pueblo">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/pueblo_callejaFlores_0.jpg" alt="pueblo">
                             <div>
                                 <p> Pueblos </p>
                             </div>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=nieve">
-                            <img src="https://acolmenero.site/photowhere/img/types/nieve_lagoCovadonga_01.jpg" alt="nieve">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/nieve_lagoCovadonga_01.jpg" alt="nieve">
                             <div>
                                 <p> Nevado </p>
                             </div>
@@ -277,7 +277,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=vanguardia">
-                            <img src="https://acolmenero.site/photowhere/img/types/vanguardia.jpg" alt="vanguardia">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/vanguardia.jpg" alt="vanguardia">
                             <div>
                                 <p> Vanguardia </p>
                             </div>
@@ -285,7 +285,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=jardin">
-                            <img src="https://acolmenero.site/photowhere/img/types/jardin_valdemoro.jpg" alt="jardin">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/jardin_valdemoro.jpg" alt="jardin">
                             <div>
                                 <p> Jardines </p>
                             </div>
@@ -293,21 +293,21 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=montaña">
-                            <img src="https://acolmenero.site/photowhere/img/types/montaña.jpg" alt="montaña">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/montaña.jpg" alt="montaña">
                             <div>
                                 <p> Montaña </p>
                             </div>
                         </a>
                     </div>
                     <div class="spot_type">
-                        <img src="https://acolmenero.site/photowhere/img/types/vistas_caboSilleiro.jpg" alt="vista">
+                        <img src="https://acolmenero.site/photowhere/src/img/types/vistas_caboSilleiro.jpg" alt="vista">
                         <div>
                             <p> Vistas </p>
                         </div>
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=primavera">
-                            <img src="https://acolmenero.site/photowhere/img/types/primavera_parqueQuinta_1.jpg" alt="primavera">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/primavera_parqueQuinta_1.jpg" alt="primavera">
                             <div>
                                 <p> Primaveral </p>
                             </div>
@@ -315,7 +315,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=abandonado">
-                            <img src="https://acolmenero.site/photowhere/img/types/abandonado_sevilla_55.jpg" alt="abandonado">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/abandonado_sevilla_55.jpg" alt="abandonado">
                             <div>
                                 <p> Abandonado </p>
                             </div>
@@ -323,7 +323,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=basico">
-                            <img src="https://acolmenero.site/photowhere/img/types/basico_plazaBadajoz_1.jpg" alt="basico">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/basico_plazaBadajoz_1.jpg" alt="basico">
                             <div>
                                 <p> Básico </p>
                             </div>
@@ -331,7 +331,7 @@
                     </div>
                     <div class="spot_type">
                         <a href="./places.html?type=bar">
-                            <img src="https://acolmenero.site/photowhere/img/types/bar.jpg" alt="bar">
+                            <img src="https://acolmenero.site/photowhere/src/img/types/bar.jpg" alt="bar">
                             <div>
                                 <p> Bar </p>
                             </div>
@@ -344,16 +344,16 @@
 
     <footer>
         <a class="nav__button" href="./index.html">
-            <img src="https://acolmenero.site/photowhere/img/search.svg" alt="Search footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/search.svg" alt="Search footer button">
         </a>
         <a class="nav__button" href="./map.html">
-            <img src="https://acolmenero.site/photowhere/img/map.svg" alt="Map footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/map.svg" alt="Map footer button">
         </a>
         <a class="nav__button" href="./contribute.html">
-            <img src="https://acolmenero.site/photowhere/img/add.svg" alt="Contribute footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/add.svg" alt="Contribute footer button">
         </a>
         <a class="nav__button" href="./profile.html">
-            <img src="https://acolmenero.site/photowhere/img/user.svg" alt="Account footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/user.svg" alt="Account footer button">
         </a>
     </footer>
 
