--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>WHEREPICK</title>
+    <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
     <link rel="stylesheet" href="./src/css/common.css?v=5">
@@ -16,7 +16,7 @@
 <body>
 
     <nav>
-        <h1>WHEREPICK</h1>
+        <h1>PHOTOWHERE</h1>
     </nav>
 
     <main>
@@ -25,16 +25,16 @@
 
     <footer>
         <a class="nav__button" href="./index.html">
-            <img src="https://acolmenero.site/photowhere/img/search.svg" alt="Search footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/search.svg" alt="Search footer button">
         </a>
         <a class="nav__button" href="./map.html">
-            <img src="https://acolmenero.site/photowhere/img/map.svg" alt="Map footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/map.svg" alt="Map footer button">
         </a>
         <a class="nav__button" href="./contribute.html">
-            <img src="https://acolmenero.site/photowhere/img/add.svg" alt="Contribute footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/add.svg" alt="Contribute footer button">
         </a>
         <a class="nav__button" href="./profile.html">
-            <img src="https://acolmenero.site/photowhere/img/user.svg" alt="Account footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/user.svg" alt="Account footer button">
         </a>
     </footer>
 
