--- a/map.html
+++ b/map.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Pragma" content="no-cache">
 
 
-    <title>WHEREPICK</title>
+    <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js?v=5"></script>
@@ -37,7 +37,7 @@
 <body>
 
     <nav>
-        <h1>WHEREPICK</h1>
+        <h1>PHOTOWHERE</h1>
     </nav>
 
 
@@ -149,16 +149,16 @@
 
     <footer>
         <a class="nav__button" href="./index.html">
-            <img src="https://acolmenero.site/photowhere/img/search.svg" alt="Search footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/search.svg" alt="Search footer button">
         </a>
         <a class="nav__button" href="./map.html">
-            <img src="https://acolmenero.site/photowhere/img/map.svg" alt="Map footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/map.svg" alt="Map footer button">
         </a>
         <a class="nav__button" href="./contribute.html">
-            <img src="https://acolmenero.site/photowhere/img/add.svg" alt="Contribute footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/add.svg" alt="Contribute footer button">
         </a>
         <a class="nav__button" href="./profile.html">
-            <img src="https://acolmenero.site/photowhere/img/user.svg" alt="Account footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/user.svg" alt="Account footer button">
         </a>
     </footer>
 
