--- a/near.html
+++ b/near.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>WHEREPICK</title>
+    <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
     <link rel="stylesheet" href="./src/css/common.css?v=5">
@@ -32,7 +32,7 @@
 <body>
 
     <nav>
-        <h1>WHEREPICK</h1>
+        <h1>PHOTOWHERE</h1>
     </nav>
 
     <div id="photo" style="display:none;">
@@ -43,8 +43,8 @@
             <img src="" alt="previsualizar" id="img_pre">
         </div>
         <div id="arrows">
-            <div id="left_arrow"> <img src="https://acolmenero.site/photowhere/img/arrow.svg" alt="flecha izquierda"> </div>
-            <div id="right_arrow"> <img src="https://acolmenero.site/photowhere/img/arrow.svg" alt="flecha derecha"> </div>
+            <div id="left_arrow"> <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha izquierda"> </div>
+            <div id="right_arrow"> <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha derecha"> </div>
         </div>
     </div>
 
@@ -70,8 +70,8 @@
                                 <p></p>
                             </div>
                             <div id="place_photos" data-photos>
-                                <img src="https://acolmenero.site/photowhere/img/places/chipiona_03.jpg" alt="Foto 0 del lugar">
-                                <img src="https://acolmenero.site/photowhere/img/places/chipiona_01.jpg" alt="Foto 1 del lugar">
+                                <img src="https://acolmenero.site/photowhere/src/img/places/chipiona_03.jpg" alt="Foto 0 del lugar">
+                                <img src="https://acolmenero.site/photowhere/src/img/places/chipiona_01.jpg" alt="Foto 1 del lugar">
                             </div>
 
                             <p id="place_address"></p>
@@ -103,16 +103,16 @@
 
     <footer>
         <a class="nav__button" href="./index.html">
-            <img src="https://acolmenero.site/photowhere/img/search.svg" alt="Search footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/search.svg" alt="Search footer button">
         </a>
         <a class="nav__button" href="./map.html">
-            <img src="https://acolmenero.site/photowhere/img/map.svg" alt="Map footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/map.svg" alt="Map footer button">
         </a>
         <a class="nav__button" href="./contribute.html">
-            <img src="https://acolmenero.site/photowhere/img/add.svg" alt="Contribute footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/add.svg" alt="Contribute footer button">
         </a>
         <a class="nav__button" href="./profile.html">
-            <img src="https://acolmenero.site/photowhere/img/user.svg" alt="Account footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/user.svg" alt="Account footer button">
         </a>
     </footer>
 
