--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>WHEREPICK</title>
+    <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
     <link rel="stylesheet" href="./src/css/common.css?v=5">
@@ -23,26 +23,26 @@
 <body>
 
     <nav>
-        <h1>WHEREPICK</h1>
+        <h1>PHOTOWHERE</h1>
     </nav>
 
     <main>
         <ul>
             <a href="./edit-profile.html" class="list_btn">
                 <p>Edit profile</p>
-                <img src="https://acolmenero.site/photowhere/img/right.svg" alt="">
+                <img src="https://acolmenero.site/photowhere/src/img/right.svg" alt="">
             </a>
             <a href="./terms-conditions.html" class="list_btn">
                 <p>Terms and Conditions</p>
-                <img src="https://acolmenero.site/photowhere/img/right.svg" alt="">
+                <img src="https://acolmenero.site/photowhere/src/img/right.svg" alt="">
             </a>
             <a href="./privacy-policy.html" class="list_btn">
                 <p>Privacy Policy</p>
-                <img src="https://acolmenero.site/photowhere/img/right.svg" alt="">
+                <img src="https://acolmenero.site/photowhere/src/img/right.svg" alt="">
             </a>
             <a id="logout" class="list_btn">
                 <p>Log Out</p>
-                <img src="https://acolmenero.site/photowhere/img/right.svg" alt="">
+                <img src="https://acolmenero.site/photowhere/src/img/right.svg" alt="">
             </a>
         </ul>
     </main>
@@ -50,16 +50,16 @@
 
     <footer>
         <a class="nav__button" href="./index.html">
-            <img src="https://acolmenero.site/photowhere/img/search.svg" alt="Search footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/search.svg" alt="Search footer button">
         </a>
         <a class="nav__button" href="./map.html">
-            <img src="https://acolmenero.site/photowhere/img/map.svg" alt="Map footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/map.svg" alt="Map footer button">
         </a>
         <a class="nav__button" href="./contribute.html">
-            <img src="https://acolmenero.site/photowhere/img/add.svg" alt="Contribute footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/add.svg" alt="Contribute footer button">
         </a>
         <a class="nav__button" href="./profile.html">
-            <img src="https://acolmenero.site/photowhere/img/user.svg" alt="Account footer button">
+            <img src="https://acolmenero.site/photowhere/src/img/user.svg" alt="Account footer button">
         </a>
     </footer>
 
