Contribute without images, fix profile and settings

--- a/contribute-images.html
+++ b/contribute-images.html
@@ -31,12 +31,8 @@
             <div class="section_title">
                 <h2>Contribute</h2>
             </div>
-
             <form>
-                <label>Nombre del lugar:*</label>
-                <input type="text" id="name_place" placeholder="Nombre.">
-                <label>Descripción:</label>
-                <textarea name="" id="desc_place" cols="30" placeholder="Descipción." rows="4"></textarea>
+                <label style="text-align: center; font-size: 4rem !important; color: yellow;">W.I.P.</label>
                 <!-- <img src="" alt="" id="ola"> -->
                 <!-- <div id="photos_input">
                     
@@ -77,19 +73,16 @@
                         <span id="preview_text" class="preview_text">Image Preview</span>
                     </div>
                 </div> -->
-                <label>Dirección:</label>
-                <input type="text" id="name_place" placeholder="Dirección.">
-                <!-- <p>Tambien </p> -->
-                <label>Localización (click):</label>
+
+                <!-- <label>Localización:</label>
                 <div id="map_div">
                     <div id="cmap"></div>
                 </div>
-
-
-                <img src="./src/img/cancel.svg" id="close" class="hidden">
-
                 <label id="error"></label>
-                <button type="button" id="send">SIGUIENTE</button>
+
+                <img src="./src/img/cancel.svg" id="close" class="hidden"> -->
+
+                <button type="button" id="send">ENVIAR</button>
             </form>
         </main>
     </div>
@@ -111,7 +104,7 @@
 
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js?v=5" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-    <script src="./src/js/contribute.js?v=5"></script>
+    <!-- <script src="./src/js/contribute.js?v=5"></script> -->
     <script src="./src/js/Geo.js?v=5"></script>
     <script src="./src/js/get_loc_map.js?v=5"></script>
 
