--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,6 +10,23 @@
     <link rel="icon" href="./src/img/ma1.png">
 
     <link rel="stylesheet" href="./src/css/common.css?v=5">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+
+    <style>
+        main {
+            padding: 1rem;
+            box-sizing: border-box;
+        }
+        
+        h2 {
+            color: whitesmoke;
+        }
+        
+        p {
+            color: whitesmoke;
+            text-align: justify;
+        }
+    </style>
 
 </head>
 
@@ -19,9 +36,21 @@
         <h1>PHOTOWHERE</h1>
     </nav>
 
-    <main>
-        <h2>Privacity Policy</h2>
-    </main>
+    <div id="mobile">
+        <main>
+            <h2>Privacity Policy</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quia aspernatur possimus soluta eum distinctio nesciunt voluptatum quos ipsa voluptas, omnis id eos exercitationem mollitia quas impedit adipisci? Explicabo, perferendis. Adipisci
+                quae quas accusantium cupiditate alias obcaecati eos repellat culpa ipsam enim eveniet excepturi dolores odit quos, velit beatae distinctio!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quia aspernatur possimus soluta eum distinctio nesciunt voluptatum quos ipsa voluptas, omnis id eos exercitationem mollitia quas impedit adipisci? Explicabo, perferendis. Adipisci
+                quae quas accusantium cupiditate alias obcaecati eos repellat culpa ipsam enim eveniet excepturi dolores odit quos, velit beatae distinctio!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quia aspernatur possimus soluta eum distinctio nesciunt voluptatum quos ipsa voluptas, omnis id eos exercitationem mollitia quas impedit adipisci? Explicabo, perferendis. Adipisci
+                quae quas accusantium cupiditate alias obcaecati eos repellat culpa ipsam enim eveniet excepturi dolores odit quos, velit beatae distinctio!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quia aspernatur possimus soluta eum distinctio nesciunt voluptatum quos ipsa voluptas, omnis id eos exercitationem mollitia quas impedit adipisci? Explicabo, perferendis. Adipisci
+                quae quas accusantium cupiditate alias obcaecati eos repellat culpa ipsam enim eveniet excepturi dolores odit quos, velit beatae distinctio!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quia aspernatur possimus soluta eum distinctio nesciunt voluptatum quos ipsa voluptas, omnis id eos exercitationem mollitia quas impedit adipisci? Explicabo, perferendis. Adipisci
+                quae quas accusantium cupiditate alias obcaecati eos repellat culpa ipsam enim eveniet excepturi dolores odit quos, velit beatae distinctio!</p>
+        </main>
+    </div>
 
 
     <footer>
