--- a/places.html
+++ b/places.html
@@ -39,11 +39,13 @@
         </div>
         <div id="photo-cont">
             <img src="" alt="previsualizar" id="img_pre">
-        </div>
-        <div id="arrows">
-            <div id="left_arrow"> <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha izquierda">
-            </div>
-            <div id="right_arrow"> <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha derecha">
+            <div id="arrows">
+                <div id="left_arrow">
+                    <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha izquierda">
+                </div>
+                <div id="right_arrow">
+                    <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha derecha">
+                </div>
             </div>
         </div>
     </div>
