--- a/settings.html
+++ b/settings.html
@@ -11,10 +11,32 @@
 
     <link rel="stylesheet" href="./src/css/common.css?v=5">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js?v=5"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 
     <style>
         main {
-            padding: 3rem 1rem;
+            padding-top: 4rem;
+        }
+        
+        .tag a {
+            text-decoration: 0;
+            background-color: rgb(70, 70, 70) !important;
+            margin: 0 auto;
+            color: rgb(235, 235, 235) !important;
+            margin-bottom: 1.2rem;
+            width: 90%;
+            display: block;
+            padding: .5rem;
+            position: relative;
+            cursor: pointer;
+        }
+        
+        .tag img {
+            width: 16px;
+            position: absolute;
+            right: 16px;
+            top: 50%;
+            transform: translateY(-50%);
         }
     </style>
 
@@ -27,24 +49,32 @@
     </nav>
 
     <main>
-        <ul>
+
+        <div class="tag">
+
+
             <a href="./edit-profile.html" class="list_btn">
-                <p>Edit profile</p>
-                <img src="https://acolmenero.site/photowhere/src/img/right.svg" alt="">
+                <span>Edit profile</span>
+                <img src="./src/img/right.svg" alt="">
             </a>
+
             <a href="./terms-conditions.html" class="list_btn">
-                <p>Terms and Conditions</p>
-                <img src="https://acolmenero.site/photowhere/src/img/right.svg" alt="">
+                <span>Terms and Conditions</span>
+                <img src="./src/img/right.svg" alt="">
             </a>
+
             <a href="./privacy-policy.html" class="list_btn">
-                <p>Privacy Policy</p>
-                <img src="https://acolmenero.site/photowhere/src/img/right.svg" alt="">
+                <span>Privacy Policy</span>
+                <img src="./src/img/right.svg" alt="">
             </a>
+
             <a id="logout" class="list_btn">
-                <p>Log Out</p>
-                <img src="https://acolmenero.site/photowhere/src/img/right.svg" alt="">
+                <span>Log Out</span>
+                <img src="./src/img/right.svg" alt="">
             </a>
-        </ul>
+        </div>
+
+
     </main>
 
 
