--- a/settings.html
+++ b/settings.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 
     <style>
-        main {
+        .tag {
             padding-top: 4rem;
         }
         
